lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_substr_replace/buffer_substr_replace9/buffer_substr_replace9.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_substr_replace/buffer_substr_replace9/buffer_substr_replace9.c:30:27: error: use of undeclared identifier 's__b'
    buffer_substr_replace(s__b ,q_b__offset ,q_b__len ,s__replace );
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
